# inx

./: .gitmodules  CMakeLists.txt
dep/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/stb/: CMakeLists.txt
inx/: CMakeLists.txt
inx/dep/SDL/test/win32/: sdlprocdump.c
inx/src/: CMakeLists.txt  app.h  cubes.h
inx/src/inx/: core.h  types.h
inx/src/inx/core/: input.cpp
inx/src/inx/platform/opengl/: opengl_texture.cpp
inx/src/inx/renderer/: buffers.cpp  camera.cpp  render2d.cpp  render_api.cpp  renderer_internal.h
inx/src/inx/resources/: shader.cpp
res/: light_cube.fs  material.fs  material.vs  quad.fs  quad.vs
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: CMakeLists.txt  app.h  cubes.h  main.cpp  renderer.h  resources.h
src/platform/: opengl.h
src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_render.cpp  opengl_render.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
src/renderer/: buffer.cpp  buffer.h  buffers.cpp  camera.cpp  camera.h  render.cpp  render.h  vertex_array.cpp  vertex_array.h
src/resources/: resources.h  shader.cpp  shader.h  texture.cpp  texture.h
